--- a/index.html
+++ b/index.html
@@ -1,8 +1,76 @@
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; URL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true'" />
-  </head>
-  <body>
-    <p>If you are not redirected automatically, follow this <a href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true">link to Google Sheets</a>.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Site no GitHub Pages</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 1rem;
+            text-align: center;
+        }
+        main {
+            padding: 2rem;
+            max-width: 800px;
+            margin: auto;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            line-height: 1.6;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Bem-vindo ao Meu Site</h1>
+        <p>Este é um site publicado com o GitHub Pages</p>
+    </header>
+
+    <main>
+        <section>
+            <h2>Sobre</h2>
+            <p>Este é um site básico de exemplo para demonstrar como configurar uma página simples usando o GitHub Pages. Você pode personalizar o conteúdo e o estilo para criar seu próprio site.</p>
+        </section>
+
+        <section>
+            <h2>Projetos</h2>
+            <p>Aqui você pode listar alguns dos seus projetos ou trabalhos.</p>
+            <ul>
+                <li><a href="#">Projeto 1</a></li>
+                <li><a href="#">Projeto 2</a></li>
+                <li><a href="#">Projeto 3</a></li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Meu Nome. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
 </html>
