--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <h2>Projetos</h2>
             <p>Aqui você pode listar alguns dos seus projetos ou trabalhos.</p>
             <ul>
-                <li><a href="#">Projeto 1</a></li>
-                <li><a href="#">Projeto 2</a></li>
-                <li><a href="#">Projeto 3</a></li>
+                <li><a href="#">Vinicius</a></li>
+                <li><a href="#">Luthaynner</a></li>
+                <li><a href="#">Viol</a></li>
             </ul>
         </section>
     </main>
