--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             background-color: #ffffff;
         }
         header {
-            background-color: #333;
+            background-color: #d53c1b;
             color: #fff;
             padding: 1rem;
             text-align: center;
