--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #ffffff;
+            background-color: #f4f4f9;
         }
         header {
-            background-color: #d53c1b;
+            background-color: #333;
             color: #fff;
             padding: 1rem;
             text-align: center;
@@ -58,12 +58,18 @@
         </section>
 
         <section>
+            <h2>Minha Planilha</h2>
+            <p>Abaixo, você pode visualizar a planilha incorporada diretamente do Google Sheets:</p>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/1_dS0stouJwplp1axYPAeN1RWPi7kO5T7f4-PtVUR2bg/pubhtml?widget=true&amp;headers=false" width="100%" height="600"></iframe>
+        </section>
+
+        <section>
             <h2>Projetos</h2>
             <p>Aqui você pode listar alguns dos seus projetos ou trabalhos.</p>
             <ul>
-                <li><a href="#">Vinicius</a></li>
-                <li><a href="#">Luthaynner</a></li>
-                <li><a href="#">Viol</a></li>
+                <li><a href="#">Projeto 1</a></li>
+                <li><a href="#">Projeto 2</a></li>
+                <li><a href="#">Projeto 3</a></li>
             </ul>
         </section>
     </main>
