--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section>
             <h2>Minha Planilha</h2>
             <p>Abaixo, você pode visualizar a planilha incorporada diretamente do Google Sheets:</p>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/1_dS0stouJwplp1axYPAeN1RWPi7kO5T7f4-PtVUR2bg/pubhtml?widget=true&amp;headers=false" width="100%" height="600"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true;headers=false" width="100%" height="600"></iframe>
         </section>
 
         <section>
