--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
         <section>
             <h2>Minha Planilha</h2>
             <p>Abaixo, você pode visualizar a planilha incorporada diretamente do Google Sheets:</p>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true;headers=false" width="100%" height="600"></iframe>
-        </section>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true" width="100%" height="600"></iframe>
 
         <section>
             <h2>Projetos</h2>
