--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 <body>
 
     <header>
-        <h1>Bem-vindo ao Meu Site</h1>
-        <p>Este é um site publicado com o GitHub Pages</p>
+        <h1>Arrematai</h1>
+        <p>Arremataí - Soluções para leilões de automóveis</p>
     </header>
 
     <main>
