--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </section>
 
         <section>
-            <h2>Minha Planilha</h2>
-            <p>Abaixo, você pode visualizar a planilha incorporada diretamente do Google Sheets:</p>
+            <h2>Oportunidades</h2>
+            <p>Abaixo, você encontra as melhores oportunidades de veículos no mundos dos leilões: </p>
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true" width="100%" height="600"></iframe>
 
         <section>
