--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 <body>
 
     <header>
+        <img>src=1.png alt="Logo ARREMATAI">
         <h1>Arrematai</h1>
         <p>Arremataí - Soluções para leilões de automóveis</p>
     </header>
