--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
 
     <header>
-        <img src="LogoARREMATAI.png" alt="Logo ARREMATAI">
+        <img src="LogoARREMATAI.png" alt="Logo ARREMATAI" class="logo-esquerda">
         <h1>Arrematai</h1>
         <p>Arremataí - Soluções para leilões de automóveis</p>
     </header>
