--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Meu Nome. Todos os direitos reservados.</p>
+        <p>&copy; 2024 Arremataí Soluções. Todos os direitos reservados.</p>
     </footer>
 
 </body>
