--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <section>
             <h2>Oportunidades</h2>
             <p>Abaixo, você encontra as melhores oportunidades de veículos no mundos dos leilões: </p>
-            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true" width="100%" height="800"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true" width="100%" height="800" class="planilha_oport"></iframe>
 
         <section>
             <h2>Projetos</h2>
