--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <p>Arremataí - Soluções para leilões de automóveis</p>
     </header>
 
+    <div class="banner">
+        <img src="BANNER.jpg" alt="Banner">
+    </div>
+
     <main>
         <section>
             <h2>Sobre</h2>
@@ -63,7 +67,7 @@
             <h2>Oportunidades</h2>
             <p>Abaixo, você encontra as melhores oportunidades de veículos no mundos dos leilões: </p>
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSYXIys0uL3ZizS9dKip-Sf_E6s131_ZV8UOK08lsVNHpToyVoJfZNsQOZqeN7LqlpvIeUD7HSR_1Ct/pubhtml?gid=0&single=true" width="100%" height="800" class="planilha_oport"></iframe>
-
+            <img      >
         <section>
             <h2>Projetos</h2>
             <p>Aqui você pode listar alguns dos seus projetos ou trabalhos.</p>
