--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             background-color: #f4f4f9;
         }
         header {
-            background-color: #333;
+            background-color: #ffffff;
             color: #fff;
             padding: 1rem;
             text-align: center;
