--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <section>
             <h2>Oportunidades</h2>
             <p>Abaixo, você encontra as melhores oportunidades de veículos no mundos dos leilões: </p>
-            <iframe src="https://docs.google.com/spreadsheets/d/1BI_8L3UEQTC-_Gp-GMxdizeW4pmQw1bxKx8HFk4h8cw/pubhtml?gid=0&single=true" width="100%" height="800" class="planilha_oport"></iframe>
+            <iframe src="https://docs.google.com/spreadsheets/d/1BI_8L3UEQTC-_Gp-GMxdizeW4pmQw1bxKx8HFk4h8cw/edit?usp=sharing" width="100%" height="800" class="planilha_oport"></iframe>
         <section>
             <h2>Projetos</h2>
             <p>Aqui você pode listar alguns dos seus projetos ou trabalhos.</p>
