--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </header>
 
     <div class="banner">
-        <img src="BANNER.jpg" alt="Banner">
+        <img id="banner" src="BANNER.jpg" alt="Banner">
     </div>
-
+   <script src="script.js"></script>
     <main>
         <section>
             <h2>Sobre</h2>
