--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
     </header> 
     
     <div class="banner">
-        <img id="banner" src="BANNER.jpg" alt="Banner">
+        <a href="https://wa.me/+5532988653556/?text=Olá,%20gostaria%20de%20saber%20mais%20sobre%20a%20assessoria%20de%20leilão%20da%20Arremataí.%20 " target="_blank"
+            <img id="banner" src="BANNER.jpg" alt="Banner">
+        </a>    
     </div>
    <script src="script.js"></script>
     <main>
