--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             color: #fff;
             padding: 1rem;
             text-align: center;
+            max-height: 30px;
         }
         main {
             padding: 2rem;
