--- a/index.html
+++ b/index.html
@@ -66,6 +66,33 @@
         </section>
 
         <section>
+            input type="text" id="queryInput" placeholder="Digite sua busca">
+            <button onclick="fetchResults()">Buscar</button>
+
+            <table id="resultsTable" border="1">
+                <thead>
+                    <tr>
+                        <th>Lote</th>
+                        <th>Marca</th>
+                        <th>Modelo</th>
+                        <th>Monta</th>
+                        <th>Ano</th>
+                        <th>Imagem</th>
+                        <th>Link</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Os resultados serão inseridos aqui -->
+                </tbody>
+            </table>
+
+        </section>
+
+
+
+
+
+        <section>
             <h2>Oportunidades</h2>
             <p>Abaixo, você encontra as melhores oportunidades de veículos no mundos dos leilões: </p>
             <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR1XIelLMrvpwpMZHyPLH8z1FXj5GLKYH6onkcZGoskrk6YcXuPkjPph2_iwp7lP8OA00X7AF52msTB/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false width=auto height="800" class="planilha_oport"></iframe>
