--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </section>
 
         <section>
-            input type="text" id="queryInput" placeholder="Digite sua busca">
+            <input type="text" id="queryInput" placeholder="Digite sua busca">
             <button onclick="fetchResults()">Buscar</button>
 
             <table id="resultsTable" border="1">
