--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         </section>
 
         <section>
+            <div id="loader" class="loader"></div>
             <input type="text" id="queryInput" placeholder="Digite sua busca">
             <button onclick="fetchResults()">Buscar</button>
 
@@ -87,9 +88,6 @@
             </table>
 
         </section>
-
-
-
 
 
         <section>
