--- a/index.html
+++ b/index.html
@@ -97,6 +97,15 @@
 
         <section>
 
+        <section>
+            <h2>Validação de URLs</h2>
+            <p>Digite uma URL abaixo para verificar se ela está cadastrada:</p>
+            <input type="text" id="urlInput" placeholder="Digite a URL">
+            <button onclick="validateURL()">Validar</button>
+            <p id="validationResult"></p>
+        </section>
+
+
 
         <section>
             <h2>Projetos</h2>
